# ai_story_marketing

./: .env.example  .gitignore  HANDBOOK.md  README.md  masterplan.md  pyproject.toml
ai_story_marketing/: __init__.py  app.py  main.py
ai_story_marketing/agents/: base_agent.py  evaluator.py  marketing_expert.py  marketing_team.py  social_media_team.py  story_improver.py  story_writer.py
ai_story_marketing/models/: claude_model.py  gpt4_model.py  llama_model.py
ai_story_marketing/templates/: base.html  evaluate.html  home.html  index.html  market.html  pdf_template.html  result.html
ai_story_marketing/ui/: app.py
ai_story_marketing/utils/: context_manager.py  output_generator.py  pdf_generator.py  utils.py
docs/: activity-diagram.mermaid  class-diagram.mermaid  component-diagram.mermaid  sequence-diagram.mermaid  use-case-diagram.mermaid
tests/: conftest.py  test_app.py  test_evaluator.py  test_gpt4_model.py  test_llama_model.py  test_main.py  test_marketing_expert.py  test_marketing_team.py  test_pdf_generator.py  test_progress_tracking.py  test_social_media_team.py  test_story_improver.py
