[tool.poetry]
name = "ai-story-marketing"
version = "0.1.0"
description = "make a story any story"
authors = ["ryan258 <ryanleejwebdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
fpdf = "^1.7.2"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
pdfkit = "^1.0.0"
flask-session = "^0.8.0"
requests = "^2.32.3"
markdown = "^3.7"
reportlab = "^4.2.2"
openai = "^1.44.1"
anthropic = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
